Add css, images folder. Briefly layout the page by using grid anh flex layout

--- a/landing_page.html
+++ b/landing_page.html
@@ -2,10 +2,74 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Nguyen Cong Cuong</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <h1>something in test branch</h1>
-    <h1>testing</h1>
+
+    <div class="container-master">
+      <div class="grid">
+        <div class="col-1 flex">
+          <img class="align-right" id="portrait" src="./images/portrait.jpg" alt="portrait">
+        </div>
+        <div class="col-2 flex">
+            <h2 id="fullname">Nguyen Cong Cuong</h2>
+            <h3 id="job">Architect, Coder</h3>
+            <table id="info">
+              <tr>
+                <td>Year of Birth</td>
+                <td>1995</td>
+              </tr>
+              <tr>
+                <td>Phone</td>
+                <td>(+84)778865406</td>
+              </tr>
+              <tr>
+                <td>Email</td>
+                <td>congcuongnguyen.arch@gmail.com</td>
+              </tr>
+            </table>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="col-1 flex">
+          <h3 class="align-right">Moto</h3>
+        </div>
+        <div class="col-2 flex">
+          <p>Work smarter, not harder</p>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="col-1 flex">
+          <h3 class="align-right">Career Objective</h3>
+        </div>
+        <div class="col-2 flex">
+          <p>BIM Coordinator</p>
+          <p>BIM Coder</p>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="col-1 flex">
+          <h3 class="align-right">Education</h3>
+        </div>
+        <div class="col-2 flex">
+          <table>
+            <tr>
+              <td>2013 - 2018</td>
+              <td>University of Architecture Ho Chi Minh City</td>
+            </tr>
+            <tr>
+              <td>2020</td>
+              <td>TOEIC - 740</td>
+            </tr>
+            <tr>
+              <td>2020</td>
+              <td>JLPT - N4</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
