Finish layout using table but it seem hard to make responsive web

--- a/landing_page.html
+++ b/landing_page.html
@@ -8,38 +8,51 @@
   <body>
 
     <div class="container-master">
+
       <div class="grid">
         <div class="col-1 flex">
-          <img class="align-right" id="portrait" src="./images/portrait.jpg" alt="portrait">
+          <img id="portrait" src="./images/portrait.jpg" alt="portrait">
         </div>
-        <div class="col-2 flex">
-            <h2 id="fullname">Nguyen Cong Cuong</h2>
-            <h3 id="job">Architect, Coder</h3>
-            <table id="info">
-              <tr>
-                <td>Year of Birth</td>
-                <td>1995</td>
-              </tr>
-              <tr>
-                <td>Phone</td>
-                <td>(+84)778865406</td>
-              </tr>
-              <tr>
-                <td>Email</td>
-                <td>congcuongnguyen.arch@gmail.com</td>
-              </tr>
+        <div class="col-2 flex vertical-center">
+            <h2>Nguyen Cong Cuong</h2>
+            <h3>Architect, Coder</h3>
+            <table id="personal-info">
+              <colgroup>
+                <col span="1" style="width: 25%;">
+                <col span="1" style="width: 75%;">
+              </colgroup>
+              <tbody>
+                <tr>
+                  <td>Year of Birth</td>
+                  <td>1995</td>
+                </tr>
+                <tr>
+                  <td>Phone</td>
+                  <td>(+84)778865406</td>
+                </tr>
+                <tr>
+                  <td>Email</td>
+                  <td>congcuongnguyen.arch@gmail.com</td>
+                </tr>
+              </tbody>
             </table>
         </div>
       </div>
+
       <div class="grid">
         <div class="col-1 flex">
-          <h3 class="align-right">Moto</h3>
+          <h3>Moto</h3>
         </div>
         <div class="col-2 flex">
-          <p>Work smarter, not harder</p>
+          <table>
+            <tr>
+              <td>Work smarter, not harder</td>
+            </tr>
+          </table>
         </div>
       </div>
-      <div class="grid">
+
+      <!-- <div class="grid">
         <div class="col-1 flex">
           <h3 class="align-right">Career Objective</h3>
         </div>
@@ -47,29 +60,117 @@
           <p>BIM Coordinator</p>
           <p>BIM Coder</p>
         </div>
-      </div>
+      </div> -->
+
       <div class="grid">
         <div class="col-1 flex">
-          <h3 class="align-right">Education</h3>
+          <h3>Education</h3>
         </div>
         <div class="col-2 flex">
           <table>
+            <colgroup>
+              <col span="1" style="width: 25%;">
+              <col span="1" style="width: 75%;">
+            </colgroup>
+            <tbody>
+              <tr>
+                <td>2013 - 2018</td>
+                <td>University of Architecture Ho Chi Minh City</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="col-1 flex">
+          <h3>Languages</h3>
+        </div>
+        <div class="col-2 flex">
+          <table>
+            <colgroup>
+              <col span="1" style="width: 25%;">
+              <col span="1" style="width: 75%;">
+            </colgroup>
+            <tbody>
+              <tr>
+                <td>Vietnamese</td>
+                <td>Native Language</td>
+              </tr>
+              <tr>
+                <td>English</td>
+                <td>TOEIC - 740</td>
+              </tr>
+              <tr>
+                <td>Japanese</td>
+                <td>JLPT - N4</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="col-1 flex">
+          <h3>Work Experience</h3>
+        </div>
+        <div class="col-2 flex">
+          <table>
+            <colgroup>
+              <col span="1" style="width: 25%;">
+              <col span="1" style="width: 75%;">
+            </colgroup>
+            <tbody>
+              <tr>
+                <td>2021 - Now</td>
+                <td>WA Projects Ltd</td>
+              </tr>
+              <tr>
+                <td>2019 - 2021</td>
+                <td>BIM Section - Obayashi Vietnam Corporation</td>
+              </tr>
+              <tr>
+                <td>2018 - 2019</td>
+                <td>HAC-Home</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="col-1 flex">
+          <h3>Skills</h3>
+        </div>
+        <div class="col-2 flex">
+          <table>
+            <colgroup>
+              <col span="1" style="width:33.33%">
+              <col span="1" style="width:33.33%">
+              <col span="1" style="width:33.33%">
+            </colgroup>
             <tr>
-              <td>2013 - 2018</td>
-              <td>University of Architecture Ho Chi Minh City</td>
+              <td>Revit</td>
+              <td>Dynamo</td>
+              <td>Revit API</td>
             </tr>
             <tr>
-              <td>2020</td>
-              <td>TOEIC - 740</td>
+              <td>Enscape</td>
+              <td>Lumion</td>
             </tr>
             <tr>
-              <td>2020</td>
-              <td>JLPT - N4</td>
+              <td>Adobe Photoshop</td>
+              <td>Adobe Premiere</td>
+            </tr>
+            <tr>
+              <td>Python</td>
+              <td>HTML/CSS</td>
+              <td>Django</td>
             </tr>
           </table>
         </div>
       </div>
-    </div>
 
+    </div>
   </body>
 </html>
