--- a/landing_page.html
+++ b/landing_page.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguyen Cong Cuong</title>
     <link rel="stylesheet" href="./css/styles.css">
   </head>
@@ -41,7 +42,7 @@
 
       <div class="grid">
         <div class="col-1 flex">
-          <h3>Moto</h3>
+          <h3>Motto</h3>
         </div>
         <div class="col-2 flex">
           <table>
@@ -122,22 +123,22 @@
             </colgroup>
             <tbody>
               <tr>
-                <td>2021 - Now</td>
-                <td>WA Projects Ltd</td>
+                <td>2018 - 2019</td>
+                <td>HAC-Home</td>
               </tr>
               <tr>
                 <td>2019 - 2021</td>
                 <td>BIM Section - Obayashi Vietnam Corporation</td>
               </tr>
               <tr>
-                <td>2018 - 2019</td>
-                <td>HAC-Home</td>
+                <td>2021 - Now</td>
+                <td>WA Projects Ltd</td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
-      
+
       <div class="grid">
         <div class="col-1 flex">
           <h3>Skills</h3>
