Change jpg to uppercase JPG to see if the image works on github

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <div class="grid">
         <div class="col-1 flex">
-          <img id="portrait" src="./images/portrait.jpg" alt="portrait">
+          <img id="portrait" src="./images/portrait.JPG" alt="portrait">
         </div>
         <div class="col-2 flex vertical-center">
             <h2>Nguyen Cong Cuong</h2>
