Update layout from table to grid for responsive

--- a/index.html
+++ b/index.html
@@ -10,165 +10,132 @@
 
     <div class="container-master">
 
-      <div class="grid">
-        <div class="col-1 flex">
+      <div class="grid1">
+        <div class="col-1-1 flex">
           <img id="portrait" src="./images/portrait.JPG" alt="portrait">
         </div>
-        <div class="col-2 flex vertical-center">
+        <div class="col-1-2 flex vertical-center">
             <h2>Nguyen Cong Cuong</h2>
             <h3>Architect, Coder</h3>
-            <table id="personal-info">
-              <colgroup>
-                <col span="1" style="width: 25%;">
-                <col span="1" style="width: 75%;">
-              </colgroup>
-              <tbody>
-                <tr>
-                  <td>Year of Birth</td>
-                  <td>1995</td>
-                </tr>
-                <tr>
-                  <td>Phone</td>
-                  <td>(+84)778865406</td>
-                </tr>
-                <tr>
-                  <td>Email</td>
-                  <td>congcuongnguyen.arch@gmail.com</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="flex" id="personal-info">
+              <div class="grid2">
+                <p class="col-2-1">Year of Birth</p>
+                <p class="col-2-2">1995</p>
+              </div>
+              <div class="grid2">
+                <p class="col-2-1">Phone</p>
+                <p class="col-2-2">(+84)778865406</p>
+              </div>
+              <div class="grid2">
+                <p class="col-2-1">Email</p>
+                <p class="col-2-2">congcuongnguyen.arch@gmail.com</p>
+              </div>
+            </div>
         </div>
       </div>
 
-      <div class="grid">
-        <div class="col-1 flex">
+      <div class="grid1">
+        <div class="col-1-1 flex">
           <h3>Motto</h3>
         </div>
-        <div class="col-2 flex">
-          <table>
-            <tr>
-              <td>Work smarter, not harder</td>
-            </tr>
-          </table>
+        <div class="col-1-2 flex vertical-center">
+          <p>Work smarter, not harder</p>
         </div>
       </div>
 
-      <!-- <div class="grid">
-        <div class="col-1 flex">
+      <!-- <div class="grid1">
+        <div class="col-1-1 flex">
           <h3 class="align-right">Career Objective</h3>
         </div>
-        <div class="col-2 flex">
+        <div class="col-1-2 flex">
           <p>BIM Coordinator</p>
           <p>BIM Coder</p>
         </div>
       </div> -->
 
-      <div class="grid">
-        <div class="col-1 flex">
+      <div class="grid1">
+        <div class="col-1-1 flex">
           <h3>Education</h3>
         </div>
-        <div class="col-2 flex">
-          <table>
-            <colgroup>
-              <col span="1" style="width: 25%;">
-              <col span="1" style="width: 75%;">
-            </colgroup>
-            <tbody>
-              <tr>
-                <td>2013 - 2018</td>
-                <td>University of Architecture Ho Chi Minh City</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-1-2 flex">
+          <div class="flex">
+            <div class="grid2">
+              <p class="col-2-1">2013 - 2018</p>
+              <p class="col-2-2">University of Architecture Ho Chi Minh City</p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="grid">
-        <div class="col-1 flex">
+      <div class="grid1">
+        <div class="col-1-1 flex">
           <h3>Languages</h3>
         </div>
-        <div class="col-2 flex">
-          <table>
-            <colgroup>
-              <col span="1" style="width: 25%;">
-              <col span="1" style="width: 75%;">
-            </colgroup>
-            <tbody>
-              <tr>
-                <td>Vietnamese</td>
-                <td>Native Language</td>
-              </tr>
-              <tr>
-                <td>English</td>
-                <td>TOEIC - 740</td>
-              </tr>
-              <tr>
-                <td>Japanese</td>
-                <td>JLPT - N4</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-1-2 flex">
+          <div class="flex">
+            <div class="grid2">
+              <p class="col-2-1">Vietnamese</p>
+              <p class="col-2-2">Native Language</p>
+            </div>
+            <div class="grid2">
+              <p class="col-2-1">English</p>
+              <p class="col-2-2">TOEIC - 740</p>
+            </div>
+            <div class="grid2">
+              <p class="col-2-1">Japanese</p>
+              <p class="col-2-2">JLPT - N4</p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="grid">
-        <div class="col-1 flex">
+      <div class="grid1">
+        <div class="col-1-1 flex">
           <h3>Work Experience</h3>
         </div>
-        <div class="col-2 flex">
-          <table>
-            <colgroup>
-              <col span="1" style="width: 25%;">
-              <col span="1" style="width: 75%;">
-            </colgroup>
-            <tbody>
-              <tr>
-                <td>2018 - 2019</td>
-                <td>HAC-Home</td>
-              </tr>
-              <tr>
-                <td>2019 - 2021</td>
-                <td>BIM Section - Obayashi Vietnam Corporation</td>
-              </tr>
-              <tr>
-                <td>2021 - Now</td>
-                <td>WA Projects Ltd</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-1-2 flex">
+          <div class="flex">
+            <div class="grid2">
+              <p class="col-2-1">2018 - 2019</p>
+              <p class="col-2-2">HAC-Home</p>
+            </div>
+            <div class="grid2">
+              <p class="col-2-1">2019 - 2021</p>
+              <p class="col-2-2">BIM Section - Obayashi Vietnam Corporation</p>
+            </div>
+            <div class="grid2">
+              <p class="col-2-1">2021 - Now</p>
+              <p class="col-2-2">WA Projects Ltd</p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="grid">
-        <div class="col-1 flex">
+      <div class="grid1">
+        <div class="col-1-1 flex">
           <h3>Skills</h3>
         </div>
-        <div class="col-2 flex">
-          <table>
-            <colgroup>
-              <col span="1" style="width:33.33%">
-              <col span="1" style="width:33.33%">
-              <col span="1" style="width:33.33%">
-            </colgroup>
-            <tr>
-              <td>Revit</td>
-              <td>Dynamo</td>
-              <td>Revit API</td>
-            </tr>
-            <tr>
-              <td>Enscape</td>
-              <td>Lumion</td>
-            </tr>
-            <tr>
-              <td>Adobe Photoshop</td>
-              <td>Adobe Premiere</td>
-            </tr>
-            <tr>
-              <td>Python</td>
-              <td>HTML/CSS</td>
-              <td>Django</td>
-            </tr>
-          </table>
+        <div class="col-1-2 flex">
+          <div class="flex">
+            <div class="grid3">
+              <p class="col-3-1">Revit</p>
+              <p class="col-3-2">Dynamo</p>
+              <p class="col-3-3">Revit API</p>
+            </div>
+            <div class="grid3">
+              <p class="col-3-1">Enscape</p>
+              <p class="col-3-2">Lumion</p>
+            </div>
+            <div class="grid3">
+              <p class="col-3-1">Adobe Photoshop</p>
+              <p class="col-3-2">Adobe Premiere</p>
+            </div>
+            <div class="grid3">
+              <p class="col-3-1">Python</p>
+              <p class="col-3-2">HTML/CSS</p>
+              <p class="col-3-3">Django</p>
+            </div>
+          </div>
         </div>
       </div>
 
