apply new design

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nguyen Cong Cuong</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,109 @@
     />
   </head>
   <body>
+    <div class="container-master flex-col gap-3">
+      <div class="profile">
+        <div class="flex-col">
+          <div class="name">Nguyen Cong Cuong</div>
+          <div class="role">Architect</div>
+        </div>
+        <div style="height: 100%">
+          <img id="portrait" src="./images/portrait2.JPG" alt="portrait" />
+        </div>
+      </div>
 
+      <div class="section text-para">
+        <div class="text-label">Objective</div>
+        <div class="">
+          Seeking a challenging Architect/BIM Developer role where I can utilize
+          my expertise in Revit, Dynamo, Python to contribute to cutting-edge
+          projects and workflows.
+        </div>
+      </div>
 
+      <div class="section text-para">
+        <div class="text-label">Contact</div>
+        <div class="">
+          <div>Phone: (+84)778865406</div>
+          <div>Email: congcuongnguyen.arch@gmail.com</div>
+          <div>
+            LinkedIn:
+            <a
+              href="https://www.linkedin.com/in/cong-cuong-nguyen-6a6672141"
+              target="_blank"
+              title="Go to my LinkedIn"
+            >
+              Visit my LinkedIn
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="section text-para">
+        <div class="text-label">Work Experience</div>
+        <div class="flex-col">
+          <div class="text-semi-label">2021-present</div>
+          <div>WA-Projects Ltd</div>
+          <ul class="">
+            <li>
+              Outsource projects from UK, Dubai utilizing Bimcloud for
+              collaborative workflows
+            </li>
+            <li>
+              Revit modeling - experienced in complex family creation and
+              massing
+            </li>
+            <li>Enscape rendering - experienced in Revit material, lighting</li>
+            <li>
+              Dynamo scripting - lead implementation, training team member,
+              proficient in Python, Revit API
+            </li>
+            <li>Revit Add-in developing</li>
+          </ul>
+        </div>
+        <div class="flex-col">
+          <div class="text-semi-label">2019-2021</div>
+          <div>Obayashi Vietnam Corporation - BIM Section</div>
+        </div>
+        <div class="flex-col">
+          <div class="text-semi-label">2018-2019</div>
+          <div>HAC-Home - Design and Build</div>
+        </div>
+      </div>
+
+      <div class="section text-para">
+        <div class="text-label">Education</div>
+        <div class="flex-col">
+          <div class="text-semi-label">2013-2018</div>
+          <div>
+            Bachelor of Architecture - University of Architecture Ho Chi Minh
+            City
+          </div>
+        </div>
+        <div class="flex-col">
+          <div class="text-semi-label">Language</div>
+          <div>English: Proficient</div>
+          <div>Japanese: Conversational</div>
+        </div>
+      </div>
+
+      <div class="section text-para">
+        <div class="text-label">Ability</div>
+        <div class="ability flex-row">
+          <div class="flex-col">
+            <div class="col-3-1">Revit</div>
+            <div class="col-3-1">Revit API</div>
+          </div>
+          <div class="flex-col">
+            <div class="col-3-1">Dynamo</div>
+            <div class="col-3-1">Enscape</div>
+          </div>
+          <div class="flex-col">
+            <div class="col-3-1">Python</div>
+            <div class="col-3-1">Photoshop</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
