--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="role">Architect</div>
         </div>
         <div style="height: 100%">
-          <img id="portrait" src="./images/portrait2.JPG" alt="portrait" />
+          <img id="portrait" src="./images/portrait.JPG" alt="portrait" />
         </div>
       </div>
 
