--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     />
   </head>
   <body>
+    <div class="navbar">
+      <a class="nav" href="index.html">Nguyen Cong Cuong</a>
+      <a class="nav" href="portfolio.html" title="Go to my portfolio">Portfolio</a>
+    </div>
     <div class="container-master flex-col gap-3">
       <div class="profile">
         <div class="flex-col">
