--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
@@ -18,8 +22,20 @@
       <a class="nav" href="index.html">Nguyen Cong Cuong</a>
       <a class="nav" href="portfolio.html" title="Go to my portfolio">Portfolio</a>
     </div>
-    <div class="container-master flex-col gap-3">
-        To do
-    </div>
+    <div class="container-master flex-col gap-3">To do</div>
+    <div class="footer">
+        <a href="#">
+          <i class="fa fa-youtube-play"></i>
+        </a>
+        <a href="#">
+          <i class="fa fa-facebook-square"></i>
+        </a>
+        <a href="#">
+          <i class="fa fa-instagram"></i>
+        </a>
+        <a href="#">
+          <i class="fa fa-linkedin-square"></i>
+        </a>
+      </div>
   </body>
 </html>
