--- a/portfolio.html
+++ b/portfolio.html
@@ -20,22 +20,65 @@
   <body>
     <div class="navbar">
       <a class="nav" href="index.html">Nguyen Cong Cuong</a>
-      <a class="nav" href="portfolio.html" title="Go to my portfolio">Portfolio</a>
+      <a class="nav" href="portfolio.html" title="Go to my portfolio"
+        >Portfolio</a
+      >
     </div>
-    <div class="container-master flex-col gap-3">To do</div>
-    <div class="footer">
-        <a href="#">
-          <i class="fa fa-youtube-play"></i>
-        </a>
-        <a href="#">
-          <i class="fa fa-facebook-square"></i>
-        </a>
-        <a href="#">
-          <i class="fa fa-instagram"></i>
-        </a>
-        <a href="#">
-          <i class="fa fa-linkedin-square"></i>
-        </a>
+    <div class="container-portfolio flex-col">
+      <img src="./images/portfolio/library-section.jpg" alt="library-section" />
+      <div class="portfolio">
+        <div class="port-col">
+          <img
+            src="./images/portfolio/library-aerial.jpg"
+            alt="library-aerial"
+          />
+
+          <img
+            src="./images/portfolio/library-interior-1.jpg"
+            alt="library-interior-1"
+          />
+          <img
+            src="./images/portfolio/library-interior-2.jpg"
+            alt="library-interior-2"
+          />
+        </div>
+        <div class="port-col">
+          <img
+            src="./images/portfolio/library-eye-view.jpg"
+            alt="library-eye-view"
+          />
+          <img src="./images/portfolio/library-view.jpg" alt="library-view" />
+          <img
+            src="./images/portfolio/library-concept.jpg"
+            alt="library-concept"
+          />
+          <img
+            src="./images/portfolio/social-housing.jpg"
+            alt="social-housing"
+          />
+        </div>
+        <div class="port-col">
+          <img
+            src="./images/portfolio/library-diagram.jpg"
+            alt="library-diagram"
+          />
+          <img src="./images/portfolio/hotel-lobby.jpg" alt="hotel-lobby" />
+        </div>
       </div>
+    </div>
+    <div class="footer">
+      <a href="#">
+        <i class="fa fa-youtube-play"></i>
+      </a>
+      <a href="#">
+        <i class="fa fa-facebook-square"></i>
+      </a>
+      <a href="#">
+        <i class="fa fa-instagram"></i>
+      </a>
+      <a href="#">
+        <i class="fa fa-linkedin-square"></i>
+      </a>
+    </div>
   </body>
 </html>
